<resources>
    <!-- 公共 -->
    <string name="app_name">安存语录</string>
    <string name="empty"></string>
    
    <string name="app_network_connecterror">网络连接不可用，请检查网络设置</string>
    <string name="app_error_please_try_again">糟糕，好像出错了，抱歉请稍后重试下吧</string>
    
    <string name="app_account_digits">0123456789</string>
    <string name="app_pwd_digits">"`~!@#$%^*()_+-={}|[],.?/0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ&amp;&lt;>'"</string>
    
    <string name="app_back">返回</string>
    <string name="app_sure">确定</string>
    <string name="app_confirm">确认</string>
    <string name="app_cacncel">取消</string>
    <string name="app_done">完成</string>
    <string name="app_pleasewait">请稍候</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    
    <string name="common_dial_msg">是否对{0}进行录音</string>
    
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <!-- 登录 -->
    <string name="activity_login_account_hint">输入本机号码</string>
    <string name="activity_login_password_hint">输入密码</string>
    <string name="activity_login_autologin">自动登录</string>
    <string name="activity_login_forgetpwdtip">忘记密码</string>
    <string name="activity_login_tip">登  录</string>
    <string name="activity_login_registertip">还没有开通？马上去注册 ></string>
    <!-- 注册,找回密码 -->
    <string name="activity_mobileverify">手机验证</string>
    <string name="activity_setpassword">密码设置</string>
    <string name="activity_mobilenum">手机号</string>
    <string name="activity_mobilenumhint">请输入手机号码</string>
    <string name="activity_register_readprotocol_1">已阅读并同意</string>
    <string name="activity_register_readprotocol_2"><a href="http://www.ancun.com">《安存语录服务条款》</a></string>
    <string name="activity_verifycode">验证码</string>
    <string name="activity_getverifycode">获取短信验证码</string>
    <string name="activity_verifycodehint">请输入收到的验证码</string>
    <string name="activity_regetverifycode">重新获取验证码</string>
    <string name="activity_pwdhint">由6&#8211;16个英文字母、数字或符号组成</string>
    <string name="activity_setpasswordhint">输入密码</string>
    <string name="activity_resetpassword">再次输入</string>
    <string name="activity_resetpasswordhint">请再输入一次密码</string>
    <string name="activity_register_done">亲，恭喜您，成功开通</string>
    <!-- MainActivity -->
    <string name="activity_main_tab_keyboard">拔号盘</string>
    <string name="activity_main_tab_callrecords">通话记录</string>
    <string name="activity_main_tab_contacts">通讯录</string>
    <string name="activity_main_tab_myrecording">我的录音</string>
    <string name="activity_main_tab_myaccount">我的账户</string>
    <string name="activity_main_tab_contacts_serachhint">搜索联系人</string>
    <string name="activity_main_tab_recording_serachhint">搜索录音</string>
    <string name="activity_main_tab_oldrecordingchange">查看原时长套餐（含赠送）所保全录音</string>
    <!-- 录音详细 -->
    <string name="activity_recorded_remark_calling">主叫号码: </string>
    <string name="activity_recorded_remark_called">被叫号码: </string>
    <string name="activity_recorded_remark_start_time">起始时间: </string>
    <string name="activity_recorded_remark_end_time">结束时间: </string>
    <string name="activity_recorded_remark_length">录音时长: </string>
    <string name="activity_recorded_remark">录音备注: </string>
    <string name="activity_recorded_remark_edit_hint">你还没有添加备注</string>
    <!-- 我的账户 -->
   	<string name="activity_account_day_consume_time">时间</string>
   	<string name="activity_account_day_consume_category">类别</string>
   	<string name="activity_account_day_consume_timelong">时长</string>
   	<string name="activity_accountrecharge_duration_spi5_prompt">购买份数</string>
   	<string name="confirm_install_hint">"安装提示"</string>	
	<string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>

	<string name="forgetpwd_title">找回密码</string>
	<string name="myaccount_title">我的账户</string>
	<string name="accountrecharge_title">账户充值</string>
	<string name="setting_title">设置与帮助</string>
	<string name="tip_title">小贴士</string>
	<string name="feedback_title">意见反馈</string>
	<string name="aboutus_title">关于我们</string>
	<string name="changepwd_title">修改密码</string>
	<string name="serverclause_title">安存语录服务条款</string>
	<string name="recordedremark_title">录音详情</string>
	<string name="register_title">注册</string>
	<string name="viewextractioncode_title">查看提取码</string>
	<string name="regextractioncode_title">申请提取码</string>
	<string name="recordedappealnotarysuccess_title">申办公证</string>
	<string name="recordedappealnotarynotify_title">公证须知</string>
	<string name="recordedappealnotarylist_title">公证机构一览表</string>
	
	<!-- 我的账户套餐版 -->
	<string name="activity_myaccount_btn_rechargelist">当前服务</string>
	<string name="activity_myaccount_btn_userecord">使用记录</string>
	
    <!-- widget -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    
    <string name="register_success_tipmsg1">赠送给您的价值60元 “淘宝卖家手机（阿里云OS）专享月度体验服务” 已同步开通，敬请体验。</string>
    <string name="register_success_tipmsg2">赠送给您的价值1200元“淘宝卖家手机卖家专享年度免费服务”已成功领取。</string>
    
    <string-array name="activity_accountrecharge_duration_spi5_data">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    
    <string name="msg_1">当前版本：</string>
    <string name="msg_2">淘宝卖家手机卖家专享年度免费服务</string>
    <string name="msg_3">淘宝卖家手机（阿里云OS）专享月度体验服务</string>
    <string name="msg_4">通话录音存储空间：剩余0MB，已用0MB</string>
    <string name="msg_5">已赠送基础服务套餐0个月，剩余未赠送套餐0个月</string>
    <string name="msg_6">录音</string>
    <string name="msg_7">激活赠送服务</string>
    <string name="msg_8">亲，当您下次需激活安存语录赠送服务时，可在使用淘宝卖家账号登录云OS后启动安存语录按照提示操作~</string>
    <string name="msg_9">亲，激活卖家手机套餐所含安存语录服务前，需确认已使用购买套餐时的淘宝卖家ID成功登录云OS，恭请掌柜的先行确认下何如？</string>
    <string name="msg_10">当前淘宝ID所含安存语录服务已被激活过或暂时无法激活，请关闭应用稍后再试，或确认下当前登录云OS的淘宝ID是否为购买卖家手机套餐时所用的卖家账号，不便之处还请见谅啦</string>
    <string name="msg_11">如您为淘宝卖家且所购卖家手机套餐中包含该应用服务，请点击“偶是掌柜” 激活开通套餐所含安存语录服务；\n非淘宝卖家或所购卖家手机套餐中不含该应用服务，点击“普通注册”开通现在也可获赠月度免费体验服务~\n特别提醒掌柜们：同一手机号码仅可激活一种类型赠送服务，如选择普通注册则可能导致卖家手机套餐中所含该应用服务无法正常获取~</string>
    <string name="msg_12">欢迎使用安存语录客户端软件，客户端使用完全免费，在使用过程中可能会产生网络流量费用，流量资费请咨询当地运营商，是否允许应用建立连接？</string>
    <string name="msg_13">如您为淘宝卖家，则您购买的服务套餐中可能包含该应用的赠送服务，请使用淘宝卖家账号登录云OS后重新登录安存语录以确认，以免影响您正常获赠该应用相关服务。</string>
    <string name="msg_14">您购买的服务套餐中所包含该应用服务已激活，请确认本机号码同注册号码相同 并登录</string>
    <string name="msg_15">登录超时</string>
    <string name="msg_16">用户名或密码有误</string>
    <string name="msg_17">账号或密码不能为空</string>
    <string name="msg_18">仅适用于企业及机构手机用户</string>
    <string name="msg_19">查看云OS当前登陆账号及状态</string>
    <string name="msg_20">确认OK，激活服务，赶紧的</string>
    <string name="msg_21">普通注册</string>
    <string name="msg_22">不再显示提醒</string>
    <string name="msg_23">不允许，关闭应用</string>
    <string name="msg_24">允许</string>
    <string name="msg_25">现在登录云OS</string>
    <string name="msg_26">暂不登录，了解应用先</string>
    <string name="msg_27">服务出现异常，请稍候再试</string>
    <string name="msg_28">出错啦，请稍候再试</string>
    <string name="msg_29">当前无法连接到网络，是否立即进行设置？</string>
    <string name="msg_30">您使用的版本过低，请立即升级！否则可能无法正常使用。</string>
    <string name="msg_31">检测到新版本，是否升级？</string>
    <string name="msg_32">立即升级</string>
    <string name="msg_33">以后再说</string>
    <string name="msg_34">立即修改</string>
    <string name="msg_35">再按一次退出程序</string>
    <string name="msg_36">您的密码过于简单,存在严重的安全隐患,建议您及时修改 ,以免造成录音被误删等不必要的麻烦和损失。</string>
    <string name="msg_37">应用将读取本地通话记录，以便您快速呼叫通话记录中的非通讯录联系人并对相关通话进行录音保全，我们不会保存和修改您通话记录中的任何信息。是否允许读取？</string>
    <string name="msg_38">应用将读取手机本地通讯录，以便您通过客户端快速呼叫通讯录联系人并根据您的需要通话内容进行录音保全，应用不会保存和针对账号绑定通讯录的任何资料。是否允许读取？</string>
    <string name="msg_39">请输入登录密码——被录音删除将进入录音回收站，如需还原或彻底删除请登录安存语录官网“我的录音-回收站”进行操作。</string>
    <string name="msg_40">确认删除该条录音？</string>
    <string name="msg_41">暂无权限</string>
    <string name="msg_42">删除录音文件必须输入密码！</string>
    <string name="msg_43">编辑</string>
    <string name="msg_44">未下载</string>
    <string name="msg_45">录音文件下载</string>
    <string name="msg_46">提示</string>
    <string name="msg_47">糟糕，好像出错了，请稍候再试！</string>
    <string name="msg_48">录音首次收听前需加载且需消耗一定的网络流量，当前网络环境为移动2G/3G网络，建议在Wifi环境下加载时长较长的通话录音，是否确认在当前网络模式下加载？</string>
    <string name="msg_49">反馈成功</string>
    <string name="msg_50">凭提取码可在官网公开查询、验证本条通话录音，确定申请？</string>
    <string name="msg_51">您确定将该录音提交至公证机构申办公证吗？</string>
    <string name="msg_52">您确定要取消该录音申办公证吗？</string>
    <string name="msg_53">撤销成功</string>
    <string name="msg_54">该条录音提取码信息将启用手机短信生成功能并以手机短信形式发给对方，短信费用由运营商收取，确认以手机短信形式发送给对方？</string>
    <string name="msg_55">是否撤销提取？</string>
    <string name="msg_56">录音备注修改成功</string>
    <string name="msg_57">开始日期不能大于结束日期</string>
    <string name="msg_58">精确查找后如需返回全部录音信息列表，请先清除所有查询条件哦</string>
    <string name="msg_59">尊敬的用户， 为了帮助安存语录更好的改进产品，在您使用过程中可能偶尔需要获取您的地理位置信息（非精确），且当应用运行出错时需要您向我们发送相关错误日志。其中错误日志用于记录出错时系统的运行状态，这些信息并不涉及您的个人信息和隐私。</string>
    
</resources>