<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/shape_bg"
        android:gravity="center_vertical"
        android:minHeight="50.0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15.0dip"
                android:text="@string/activity_setpassword"
                android:textColor="@android:color/black"
                android:textSize="20.0sp" />
     <View
                        android:layout_width="1dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="14dip"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="14dip"
                        android:background="#AAAAAA" />
            <EditText
                android:id="@+id/appr_edittext_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="0.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@android:color/white"
                android:digits="@string/app_pwd_digits"
                android:hint="@string/activity_setpasswordhint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="#ff545454"
                android:textSize="18.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15.0dip"
                android:text="@string/activity_resetpassword"
                android:textColor="@android:color/black"
                android:textSize="20.0sp" />
     <View
                        android:layout_width="1dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="10dip"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="10dip"
                        android:background="#AAAAAA" />
            <EditText
                android:id="@+id/appr_edittext_rePassword"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="0.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@android:color/white"
                android:digits="@string/app_pwd_digits"
                android:hint="@string/activity_resetpasswordhint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="#ff545454"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:text="@string/activity_pwdhint"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />

</LinearLayout>