<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center" >

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10.0dip">
        
        <ImageView
            android:layout_width="22dip"
            android:layout_height="22dip"
            android:layout_margin="5.0dip"
            android:contentDescription="@string/empty"
            android:background="@drawable/result_ok" />
        
        <TextView
            android:id="@+id/appr_end_module_textview_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_done"
            android:textColor="@android:color/black"
            android:textSize="20.0sp" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/appr_end_module_tipmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_marginLeft="18.0dip"
        android:layout_marginRight="18.0dip"
        android:text="赠送给您的价值720元“阿里云手机卖家版专享年度免费服务”已经成功领取"
        android:textColor="#ff0000"
        android:textSize="18.0sp"
        android:visibility="gone"/>
    
    <TextView
        android:id="@+id/appr_my_mobile_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/app_name"
        android:textColor="#0767af"
        android:textSize="20.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/shape_line" />

</LinearLayout>