<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_gb"
    android:orientation="vertical" >
    
    <include layout="@layout/common_title" />
    
    <LinearLayout 
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="12.0dip"
        android:paddingBottom="12.0dip"
        android:background="@drawable/account_day_detail_list_title_bg">
        
        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:singleLine="true"
             android:textColor="#345e7a"
             android:textSize="22.0dp"
             android:text="@string/activity_account_day_consume_time" />
        
	     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:singleLine="true"
             android:textColor="#345e7a"
             android:textSize="22.0dp"
             android:text="@string/activity_account_day_consume_category" />
	     
        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:singleLine="true"
             android:textColor="#345e7a"
             android:textSize="22.0dp"
             android:text="@string/activity_account_day_consume_timelong" />
        
    </LinearLayout>
    
    <com.ancun.widget.PullToRefreshListView
        android:id="@+id/account_day_consume_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:choiceMode="singleChoice"
        android:divider="#dddddd"
        android:dividerHeight="1dp"
        android:fadeScrollbars="true"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:scrollingCache="false" />

</LinearLayout>