<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/shape_bg"
        android:gravity="center_vertical"
        android:minHeight="50.0dip" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="15.0dip"
            android:text="@string/activity_verifycode"
            android:textColor="@android:color/black"
            android:textSize="20.0sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="14dip"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="14dip"
            android:background="#AAAAAA" />
        <EditText
            android:id="@+id/appr_edittext_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1.0dip"
            android:layout_marginRight="1.0dip"
            android:layout_marginTop="1.0dip"
            android:layout_weight="3.0"
            android:background="@android:color/white"
            android:hint="@string/activity_verifycodehint"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#ff545454"
            android:textSize="18.0sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/appr_textview_time_to_reget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />
    <Button
        android:id="@+id/appr_btn_reget"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/register_button_selector"
        android:gravity="center"
        android:text="@string/activity_regetverifycode"
        android:textColor="#ff000000"
        android:textSize="18.0sp"
        android:visibility="gone" />
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_3"
        android:textSize="@dimen/fontsize_h0"
        android:textColor="#ff0000"
        android:text="尊敬的用户，短信验证码经由短信通道统一发送，部分手机安全软件可能会针对短信通道发送信息做默认拦截处理，如您长时间且多次尝试均未收到验证码信息，建议您查看手机安全软件的拦截信息以确认验证码未被误拦截。" />
</LinearLayout>